# fiap

./: README.md
artificial-intelligence/: image_processing.ipynb
automated-machine-learning/: notes.md
automated-machine-learning/class_2023_08_18_imdb_movies/: imdb_movies.ipynb  pyproject.toml
cyber-security/: Introduction_nlp_spa_cy.ipynb  class_2022_08_04_captcha.ipynb  class_2022_08_24_image_detection-checkpoint.ipynb  class_2022_08_24_image_detection.ipynb  class_2022_08_24_image_segmentation_pytorch.ipynb  issue_table.csv  issue_table_v2.csv  last_class.ipynb  link  word_classification_v1.ipynb  word_classification_v2.ipynb
data-science/: alpha.db  class_11_pandasql.ipynb  class_11_us_election.ipynb  database.db  database.sql  database_creation.sql  docker-compose.yml  papelaria.db  vehicle.sql  vehicles.db
generative-adversarial-networks/: class_2023_02_16.ipynb  notes.md
machine-learning/: class_05_decision_tree.ipynb  class_06_linear_regression.ipynb  class_13_logistic_regression.ipynb  class_14_knn.ipynb  class_2022_08_11_pca.ipynb  class_2022_08_18_cvm.ipynb  class_2022_08_23_transfer_learning.ipynb  class_2022_09_13_recommendation.ipynb  iris_classification.ipynb
neuromorphic-computing/checkpoint-01/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
neuromorphic-computing/checkpoint-01/api/app/: database.py  main.py
neuromorphic-computing/checkpoint-01/api/app/models/: temperature.py
neuromorphic-computing/checkpoint-01/api/app/routers/: temperatures_router.py
neuromorphic-computing/checkpoint-01/api/database/: migration.sql
neuromorphic-computing/checkpoint-01/api/migrations/: env.py
neuromorphic-computing/checkpoint-01/web/: Dockerfile  README.md  pyproject.toml
neuromorphic-computing/checkpoint-01/web/app/: main.py
neuromorphic-computing/checkpoint-01/web/app/repositories/: temperature_repository.py
neuromorphic-computing/checkpoint-01/web/app/repository/: temperature_repository.py
neuromorphic-computing/checkpoint-01/web/app/view/: home_view.py
neuromorphic-computing/checkpoint-01/web/app/views/: home_view.py
(+153 files in other folders)
