[tool.poetry]
name = "web-scrapping-imdb"
version = "0.1.0"
description = ""
authors = ["César Noreña <csarnorena@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
lxml = "^4.9.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.16.1"
wordcloud = "^1.9.2"
scikit-learn = "^1.3.0"
yellowbrick = "^1.5"
wget = "^3.2"
beautifulsoup4 = "^4.12.2"
notebook = "^7.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
