[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["César Noreña <csarnorena@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
alembic = "^1.10.3"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
